--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy React Project to Plesk Server
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy:
@@ -27,9 +27,9 @@ jobs:
     - name: Upload build to Plesk Server
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        server: 94.73.147.91
-        username: u1879062
-        password: 5va13mafhvd3nCZB&
+        server: ${{ secrets.PLESK_SERVER }}
+        username: ${{ secrets.PLESK_USERNAME }}
+        password: ${{ secrets.PLESK_PASSWORD }}
         local-dir: ./project-name/build/
         server-dir: /httpdocs/
 
